--- a/cohorts/2024/01-intro/homework.ipynb
+++ b/cohorts/2024/01-intro/homework.ipynb
@@ -305,23 +305,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b7941b7a-7f4b-4014-ae2e-9a9850dcafd8",
+   "execution_count": 23,
+   "id": "eec93ff8-e41f-43f3-9a99-338e3512936b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timedelta('0 days 00:42:35.661074')"
+       "42.59435124195458"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_jan['duration'].std()"
+    "(data_jan['duration'].dt.total_seconds()/60).std()"
    ]
   },
   {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "193c860d-f485-4a9e-a444-d8a12275e67e",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "9d3d6310-7b86-45cf-92e9-aac78a679114",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "(3009173, 515)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,49 +453,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "9add07d2-ea51-471b-8bc3-fc431b04e712",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y = data_jan_sub['duration'].dt.total_seconds().to_numpy()"
+    "Y = data_jan_sub['duration'].dt.total_seconds().to_numpy()/60"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9229032f-ce93-4edf-a6d5-2b51b4886f25",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "LR = LinearRegression()\n",
     "LR.fit(X, Y)"
@@ -540,18 +511,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.2"
   }
  },
  "nbformat": 4,
